Lab/Code/syntax.output
Terminals unused in grammar

   DOUBLE
   BLANK


State 35 conflicts: 3 shift/reduce
State 40 conflicts: 3 shift/reduce
State 85 conflicts: 10 shift/reduce
State 86 conflicts: 10 shift/reduce
State 114 conflicts: 10 shift/reduce
State 115 conflicts: 10 shift/reduce
State 116 conflicts: 10 shift/reduce
State 117 conflicts: 10 shift/reduce
State 118 conflicts: 10 shift/reduce
State 119 conflicts: 10 shift/reduce
State 122 conflicts: 10 shift/reduce
State 123 conflicts: 10 shift/reduce
State 129 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Com1
    8       | Com2
    9       | error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag
   16                | error RC

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC
   30       | error RC

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | Com1
   40     | Com2
   41     | error RP

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | Com1
   46    | Com2
   47    | error SEMI

   48 DecList: Dec
   49        | Dec COMMA DecList

   50 Dec: VarDec
   51    | VarDec ASSIGNOP Exp

   52 Com1: CM

   53 Com2: LCM RCM

   54 Exp: Exp ASSIGNOP Exp
   55    | Exp AND Exp
   56    | Exp OR Exp
   57    | Exp RELOP Exp
   58    | Exp PLUS Exp
   59    | Exp MINUS Exp
   60    | Exp STAR Exp
   61    | Exp DIV Exp
   62    | LP Exp RP
   63    | MINUS Exp
   64    | NOT Exp
   65    | ID LP Args RP
   66    | ID LP RP
   67    | Exp LB Exp RB
   68    | Exp DOT ID
   69    | ID
   70    | INT
   71    | FLOAT

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 9 16 22 25 30 41 47
INT (258) 21 70
FLOAT (259) 71
DOUBLE (260)
PLUS (261) 58
MINUS (262) 59 63
STAR (263) 60
DIV (264) 61
AND (265) 55
OR (266) 56
DOT (267) 68
NOT (268) 64
LP (269) 23 24 36 37 38 62 65 66
RP (270) 23 24 25 36 37 38 41 62 65 66
LB (271) 21 67
RB (272) 21 22 67
LC (273) 14 29
RC (274) 14 16 29 30
STRUCT (275) 14 15
RETURN (276) 35
IF (277) 36 37
ELSE (278) 37
WHILE (279) 38
BLANK (280)
SEMI (281) 4 5 9 33 35 44 47
COMMA (282) 11 26 49 72
RELOP (283) 57
ASSIGNOP (284) 51 54
ID (285) 17 19 20 23 24 65 66 68 69
TYPE (286) 12
CM (287) 52
LCM (288) 53
RCM (289) 53


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
Program (36)
    on left: 1, on right: 0
ExtDefList (37)
    on left: 2 3, on right: 1 2
ExtDef (38)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (39)
    on left: 10 11, on right: 4 11
Specifier (40)
    on left: 12 13, on right: 4 5 6 28 44
StructSpecifier (41)
    on left: 14 15 16, on right: 13
OptTag (42)
    on left: 17 18, on right: 14
Tag (43)
    on left: 19, on right: 15
VarDec (44)
    on left: 20 21 22, on right: 10 11 21 28 50 51
FunDec (45)
    on left: 23 24 25, on right: 6
VarList (46)
    on left: 26 27, on right: 23 26
ParamDec (47)
    on left: 28, on right: 26 27
CompSt (48)
    on left: 29 30, on right: 6 34
StmtList (49)
    on left: 31 32, on right: 29 31
Stmt (50)
    on left: 33 34 35 36 37 38 39 40 41, on right: 31 36 37 38
DefList (51)
    on left: 42 43, on right: 14 29 42
Def (52)
    on left: 44 45 46 47, on right: 42
DecList (53)
    on left: 48 49, on right: 44 49
Dec (54)
    on left: 50 51, on right: 48 49
Com1 (55)
    on left: 52, on right: 7 39 45
Com2 (56)
    on left: 53, on right: 8 40 46
Exp (57)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71,
    on right: 33 35 36 37 38 51 54 55 56 57 58 59 60 61 62 63 64 67
    68 72 73
Args (58)
    on left: 72 73, on right: 65 72


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3
    CM      shift, and go to state 4
    LCM     shift, and go to state 5

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 6
    ExtDefList       go to state 7
    ExtDef           go to state 8
    Specifier        go to state 9
    StructSpecifier  go to state 10
    Com1             go to state 11
    Com2             go to state 12


State 1

    9 ExtDef: error . SEMI
   16 StructSpecifier: error . RC

    RC    shift, and go to state 13
    SEMI  shift, and go to state 14


State 2

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 15

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 16
    Tag     go to state 17


State 3

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 4

   52 Com1: CM .

    $default  reduce using rule 52 (Com1)


State 5

   53 Com2: LCM . RCM

    RCM  shift, and go to state 18


State 6

    0 $accept: Program . $end

    $end  shift, and go to state 19


State 7

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 8

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3
    CM      shift, and go to state 4
    LCM     shift, and go to state 5

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 20
    ExtDef           go to state 8
    Specifier        go to state 9
    StructSpecifier  go to state 10
    Com1             go to state 11
    Com2             go to state 12


State 9

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 21
    SEMI   shift, and go to state 22
    ID     shift, and go to state 23

    ExtDecList  go to state 24
    VarDec      go to state 25
    FunDec      go to state 26


State 10

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 11

    7 ExtDef: Com1 .

    $default  reduce using rule 7 (ExtDef)


State 12

    8 ExtDef: Com2 .

    $default  reduce using rule 8 (ExtDef)


State 13

   16 StructSpecifier: error RC .

    $default  reduce using rule 16 (StructSpecifier)


State 14

    9 ExtDef: error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 15

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 16

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 27


State 17

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 18

   53 Com2: LCM RCM .

    $default  reduce using rule 53 (Com2)


State 19

    0 $accept: Program $end .

    $default  accept


State 20

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 21

   22 VarDec: error . RB
   25 FunDec: error . RP

    RP  shift, and go to state 28
    RB  shift, and go to state 29


State 22

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 23

   20 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP

    LP  shift, and go to state 30

    $default  reduce using rule 20 (VarDec)


State 24

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 31


State 25

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 32
    COMMA  shift, and go to state 33

    $default  reduce using rule 10 (ExtDecList)


State 26

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 34
    LC     shift, and go to state 35

    CompSt  go to state 36


State 27

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 37
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3
    CM      shift, and go to state 4
    LCM     shift, and go to state 5

    RC  reduce using rule 43 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 10
    DefList          go to state 39
    Def              go to state 40
    Com1             go to state 41
    Com2             go to state 42


State 28

   25 FunDec: error RP .

    $default  reduce using rule 25 (FunDec)


State 29

   22 VarDec: error RB .

    $default  reduce using rule 22 (VarDec)


State 30

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP

    error   shift, and go to state 43
    RP      shift, and go to state 44
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 45
    StructSpecifier  go to state 10
    VarList          go to state 46
    ParamDec         go to state 47


State 31

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 32

   21 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 48


State 33

   11 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 49
    ID     shift, and go to state 50

    ExtDecList  go to state 51
    VarDec      go to state 25


State 34

   30 CompSt: error . RC

    RC  shift, and go to state 52


State 35

   29 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 37
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3
    CM      shift, and go to state 4
    LCM     shift, and go to state 5

    error   [reduce using rule 43 (DefList)]
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    CM      [reduce using rule 43 (DefList)]
    LCM     [reduce using rule 43 (DefList)]

    Specifier        go to state 38
    StructSpecifier  go to state 10
    DefList          go to state 53
    Def              go to state 40
    Com1             go to state 41
    Com2             go to state 42


State 36

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 37

   16 StructSpecifier: error . RC
   47 Def: error . SEMI

    RC    shift, and go to state 13
    SEMI  shift, and go to state 54


State 38

   44 Def: Specifier . DecList SEMI

    error  shift, and go to state 49
    ID     shift, and go to state 50

    VarDec   go to state 55
    DecList  go to state 56
    Dec      go to state 57


State 39

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 58


State 40

   42 DefList: Def . DefList

    error   shift, and go to state 37
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3
    CM      shift, and go to state 4
    LCM     shift, and go to state 5

    error   [reduce using rule 43 (DefList)]
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    CM      [reduce using rule 43 (DefList)]
    LCM     [reduce using rule 43 (DefList)]

    Specifier        go to state 38
    StructSpecifier  go to state 10
    DefList          go to state 59
    Def              go to state 40
    Com1             go to state 41
    Com2             go to state 42


State 41

   45 Def: Com1 .

    $default  reduce using rule 45 (Def)


State 42

   46 Def: Com2 .

    $default  reduce using rule 46 (Def)


State 43

   16 StructSpecifier: error . RC

    RC  shift, and go to state 13


State 44

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 45

   28 ParamDec: Specifier . VarDec

    error  shift, and go to state 49
    ID     shift, and go to state 50

    VarDec  go to state 60


State 46

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 61


State 47

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 62

    $default  reduce using rule 27 (VarList)


State 48

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 63


State 49

   22 VarDec: error . RB

    RB  shift, and go to state 29


State 50

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 51

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 52

   30 CompSt: error RC .

    $default  reduce using rule 30 (CompSt)


State 53

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 64
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 35
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72
    ID      shift, and go to state 73
    CM      shift, and go to state 4
    LCM     shift, and go to state 5

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 74
    StmtList  go to state 75
    Stmt      go to state 76
    Com1      go to state 77
    Com2      go to state 78
    Exp       go to state 79


State 54

   47 Def: error SEMI .

    $default  reduce using rule 47 (Def)


State 55

   21 VarDec: VarDec . LB INT RB
   50 Dec: VarDec .
   51    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 32
    ASSIGNOP  shift, and go to state 80

    $default  reduce using rule 50 (Dec)


State 56

   44 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 81


State 57

   48 DecList: Dec .
   49        | Dec . COMMA DecList

    COMMA  shift, and go to state 82

    $default  reduce using rule 48 (DecList)


State 58

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 59

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 60

   21 VarDec: VarDec . LB INT RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 32

    $default  reduce using rule 28 (ParamDec)


State 61

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 62

   26 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 43
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 45
    StructSpecifier  go to state 10
    VarList          go to state 83
    ParamDec         go to state 47


State 63

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 64

   30 CompSt: error . RC
   41 Stmt: error . RP

    RP  shift, and go to state 84
    RC  shift, and go to state 52


State 65

   70 Exp: INT .

    $default  reduce using rule 70 (Exp)


State 66

   71 Exp: FLOAT .

    $default  reduce using rule 71 (Exp)


State 67

   63 Exp: MINUS . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 85


State 68

   64 Exp: NOT . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 86


State 69

   62 Exp: LP . Exp RP

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 87


State 70

   35 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 88


State 71

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 89


State 72

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 90


State 73

   65 Exp: ID . LP Args RP
   66    | ID . LP RP
   69    | ID .

    LP  shift, and go to state 91

    $default  reduce using rule 69 (Exp)


State 74

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 75

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 92


State 76

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 64
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 35
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72
    ID      shift, and go to state 73
    CM      shift, and go to state 4
    LCM     shift, and go to state 5

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 74
    StmtList  go to state 93
    Stmt      go to state 76
    Com1      go to state 77
    Com2      go to state 78
    Exp       go to state 79


State 77

   39 Stmt: Com1 .

    $default  reduce using rule 39 (Stmt)


State 78

   40 Stmt: Com2 .

    $default  reduce using rule 40 (Stmt)


State 79

   33 Stmt: Exp . SEMI
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101
    SEMI      shift, and go to state 102
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 104


State 80

   51 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 105


State 81

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 82

   49 DecList: Dec COMMA . DecList

    error  shift, and go to state 49
    ID     shift, and go to state 50

    VarDec   go to state 55
    DecList  go to state 106
    Dec      go to state 57


State 83

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 84

   41 Stmt: error RP .

    $default  reduce using rule 41 (Stmt)


State 85

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   63    | MINUS Exp .
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 104

    PLUS      [reduce using rule 63 (Exp)]
    MINUS     [reduce using rule 63 (Exp)]
    STAR      [reduce using rule 63 (Exp)]
    DIV       [reduce using rule 63 (Exp)]
    AND       [reduce using rule 63 (Exp)]
    OR        [reduce using rule 63 (Exp)]
    DOT       [reduce using rule 63 (Exp)]
    LB        [reduce using rule 63 (Exp)]
    RELOP     [reduce using rule 63 (Exp)]
    ASSIGNOP  [reduce using rule 63 (Exp)]
    $default  reduce using rule 63 (Exp)


State 86

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   64    | NOT Exp .
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 104

    PLUS      [reduce using rule 64 (Exp)]
    MINUS     [reduce using rule 64 (Exp)]
    STAR      [reduce using rule 64 (Exp)]
    DIV       [reduce using rule 64 (Exp)]
    AND       [reduce using rule 64 (Exp)]
    OR        [reduce using rule 64 (Exp)]
    DOT       [reduce using rule 64 (Exp)]
    LB        [reduce using rule 64 (Exp)]
    RELOP     [reduce using rule 64 (Exp)]
    ASSIGNOP  [reduce using rule 64 (Exp)]
    $default  reduce using rule 64 (Exp)


State 87

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   62    | LP Exp . RP
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    RP        shift, and go to state 107
    LB        shift, and go to state 101
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 104


State 88

   35 Stmt: RETURN Exp . SEMI
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101
    SEMI      shift, and go to state 108
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 104


State 89

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 109


State 90

   38 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 110


State 91

   65 Exp: ID LP . Args RP
   66    | ID LP . RP

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    RP     shift, and go to state 111
    ID     shift, and go to state 73

    Exp   go to state 112
    Args  go to state 113


State 92

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 93

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 94

   58 Exp: Exp PLUS . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 114


State 95

   59 Exp: Exp MINUS . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 115


State 96

   60 Exp: Exp STAR . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 116


State 97

   61 Exp: Exp DIV . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 117


State 98

   55 Exp: Exp AND . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 118


State 99

   56 Exp: Exp OR . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 119


State 100

   68 Exp: Exp DOT . ID

    ID  shift, and go to state 120


State 101

   67 Exp: Exp LB . Exp RB

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 121


State 102

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 103

   57 Exp: Exp RELOP . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 122


State 104

   54 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    ID     shift, and go to state 73

    Exp  go to state 123


State 105

   51 Dec: VarDec ASSIGNOP Exp .
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 104

    $default  reduce using rule 51 (Dec)


State 106

   49 DecList: Dec COMMA DecList .

    $default  reduce using rule 49 (DecList)


State 107

   62 Exp: LP Exp RP .

    $default  reduce using rule 62 (Exp)


State 108

   35 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 35 (Stmt)


State 109

   36 Stmt: IF LP Exp . RP Stmt
   37     | IF LP Exp . RP Stmt ELSE Stmt
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    RP        shift, and go to state 124
    LB        shift, and go to state 101
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 104


State 110

   38 Stmt: WHILE LP Exp . RP Stmt
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    RP        shift, and go to state 125
    LB        shift, and go to state 101
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 104


State 111

   66 Exp: ID LP RP .

    $default  reduce using rule 66 (Exp)


State 112

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72 Args: Exp . COMMA Args
   73     | Exp .

    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101
    COMMA     shift, and go to state 126
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 104

    $default  reduce using rule 73 (Args)


State 113

   65 Exp: ID LP Args . RP

    RP  shift, and go to state 127

